--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charmset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Gotowanie z Maklowiczem</title>
+	<title><www class="gotowaniezmaklowiczem pl"></www></title>
 </head>
 <body>
 		<h1>Witaj w mojej kuchni!</h1>
